Add about section

--- a/index.html
+++ b/index.html
@@ -134,29 +134,45 @@
     <section class="about">
         <div class="container">
             <div class="about__textbox">
-                <h2 class="about__heading">How do we work?</h2>
-                <p class="about__main-text">Nullam laoreet nec turpis et ultrices. Duis sit amet quam arcu. Nam facilisis lacinia ex, eget sollicitudin massa pellentesque in. Vivamus mattis eros at sem pulvinar</p>
+                <h2 class="about__heading">
+                    How do we work?
+                </h2>
+                <p class="about__main-text">
+                    Nullam laoreet nec turpis et ultrices. Duis sit amet quam arcu. Nam facilisis lacinia ex, eget sollicitudin massa pellentesque in. Vivamus mattis eros at sem pulvinar
+                </p>
             </div>
             <ul class="about-list">
                 <li class="about__items about__items--initial">
-                    <img  src="./images/conversation.svg" alt="conversation-of-people" width="488" height="390">
+                    <img class="about__img" src="./images/conservation.png" alt="conversation-of-people" width="488" height="390">
                     <div class="about__mini-wrapper">
-                        <h3 class="about__title">Let's clarify the requirements</h3>
-                        <p class="about__text">Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.</p>
+                        <h3 class="about__title">
+                            Let's clarify the requirements
+                        </h3>
+                        <p class="about__text">
+                            Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.
+                        </p>
                     </div>
                 </li>
                 <li class="about__items about__items--middle">
-                    <img  src="./images/conservationn.svg" alt="conversation-of-people" width="488" height="390">
+                    <img class="about__img about__img--middle" src="./images/woman-working.png" alt="conversation-of-people" width="488" height="390">
                     <div class="about__mini-wrapper">
-                        <h3 class="about__title">Let's clarify the requirements</h3>
-                        <p class="about__text">Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.</p>
+                        <h3 class="about__title">
+                            Let's clarify the requirements
+                        </h3>
+                        <p class="about__text">
+                            Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.
+                        </p>
                     </div>
                 </li>
                 <li class="about__items about__items--last">
-                    <img  src="./images/conservationnn.svg" alt="conversation-of-people" width="488" height="390">
+                    <img class="about__img" src="./images/team-working.png" alt="conversation-of-people" width="488" height="390">
                     <div class="about__mini-wrapper">
-                        <h3 class="about__title">Let's clarify the requirements</h3>
-                        <p class="about__text">Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.</p>
+                        <h3 class="about__title">
+                            Let's clarify the requirements
+                        </h3>
+                        <p class="about__text">
+                            Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.
+                        </p>
                     </div>
                 </li>
         </div>
