--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pixer</title>
-    <link rel="stylesheet" href="./main.css">
+    <!--<link rel="stylesheet" href="./main.css">-->
+    <link rel="stylesheet" href="./minified.css">
 </head>
 <body>
     <header class="site-header">
@@ -297,6 +298,7 @@
                         </a>
                     </div> 
                 </ul>
+            </div>
     </footer>
 </body>
 </html>
